// GENERATED CODE. To update this file use the corresponding menu item in the Unity Editor.
public static partial class R
{
    public static class InputActions
    {
        public static readonly string ui_cancel = "ui/cancel";
        public static readonly string ui_click = "ui/click";
        public static readonly string ui_middleClick = "ui/middleClick";
        public static readonly string ui_navigate = "ui/navigate";
        public static readonly string ui_point = "ui/point";
        public static readonly string ui_rightClick = "ui/rightClick";
        public static readonly string ui_scrollWheel = "ui/scrollWheel";
        public static readonly string ui_submit = "ui/submit";
        public static readonly string ui_trackedDeviceOrientation = "ui/trackedDeviceOrientation";
        public static readonly string ui_trackedDevicePosition = "ui/trackedDevicePosition";
        public static readonly string usplay_anyKeyboardModifier = "usplay/anyKeyboardModifier";
        public static readonly string usplay_anyKeyboardModifierPressedOrReleased = "usplay/anyKeyboardModifierPressedOrReleased";
        public static readonly string usplay_back = "usplay/back";
        public static readonly string usplay_closeContextMenu = "usplay/closeContextMenu";
        public static readonly string usplay_openContextMenu = "usplay/openContextMenu";
    }
}
